[project]
name = "hcheckz"
version = "1.0.0"
description = "Tiny async readiness and liveness healthcheck server"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

authors = [
    {name = "Honskii"}
]

dependencies = [] # В этом вся суть!!

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]