[project]
name = "hcheckz"
version = "1.0.0"
description = "Tiny and fast async readiness and liveness healthcheck server with no dependencies"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

authors = [
    {name = "Honskii"}
]

dependencies = [] # В этом вся суть!!

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "https://github.com/Honskii/HCheckz"